--- a/eoc-newsticker.css
+++ b/eoc-newsticker.css
@@ -5,17 +5,39 @@
   background-color: #eee;
 }
 
-.eoc-newsticker > div {
+.eoc-newsticker .eoc-newsticker-container {
   position: relative;
   height: 20px;
   overflow: hidden;
 }
 
-.eoc-newsticker > div > div {
+.eoc-newsticker .eoc-newsticker-one,
+.eoc-newsticker .eoc-newsticker-two {
   position: absolute;
   left: 0;
   top: 0;
   height: 20px;
   line-height: 20px;
   white-space: nowrap;
+}
+
+.eoc-newsticker-loader {
+  position: absolute;
+  left: calc(50% - 10px);
+  width: 16px;
+  height: 16px;
+  display: block;
+  border: 2px solid #555555;
+  border-top: 2px solid transparent;
+  border-radius: 50%;
+  animation: eoc-newsticker-spin 1s linear infinite;
+}
+
+@keyframes eoc-newsticker-spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
