--- a/eocjs-newsticker.css
+++ b/eocjs-newsticker.css
@@ -1,4 +1,4 @@
-/* eocjsNewsticker v0.3.5 */
+/* eocjsNewsticker v0.3.6 */
 
 .eocjs-newsticker {
   padding: 10px 0;
@@ -34,10 +34,7 @@
 }
 
 @keyframes eocjs-newsticker-spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
+  to {
     transform: rotate(360deg);
   }
 }
