--- a/eocjs-newsticker.css
+++ b/eocjs-newsticker.css
@@ -1,4 +1,4 @@
-/* eocjsNewsticker v0.7.0 */
+/* eocjsNewsticker v0.7.1 */
 
 .eocjs-newsticker {
   padding: 10px 0;
@@ -7,7 +7,7 @@
 
 .eocjs-newsticker .eocjs-newsticker-container {
   position: relative;
-  height: 20px;
+  height: 24px;
   overflow: hidden;
 }
 
@@ -16,18 +16,19 @@
   position: absolute;
   left: 0;
   top: 0;
-  height: 20px;
-  line-height: 20px;
+  height: 24px;
+  line-height: 24px;
   white-space: nowrap;
 }
 
 .eocjs-newsticker-loader {
   position: absolute;
   left: calc(50% - 10px);
-  width: 16px;
-  height: 16px;
+  top: 2px;
+  width: 20px;
+  height: 20px;
   display: block;
-  border: 2px solid #555555;
+  border: 3px solid #555555;
   border-top: 2px solid transparent;
   border-radius: 50%;
   animation: eocjs-newsticker-spin .75s linear infinite;
